deploy/neighbour-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reporting
spec:
  selector:
    app: reporting
  ports:
    - port: 80
      targetPort: 8080
